--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <h2>Michelle Cristina Adonário dos Santos</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Desenvolvimento FontEnd Jr</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Desenvolvimento Front End</p>
               <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Osasco-SP, Brasil</p>
               <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>mcadonario@gmail.com</p>
               <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(11) 98623-8016</p>
@@ -45,7 +45,7 @@
               <p class="w3-large">
                 <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
               </p>
-              <p><Html</p>
+              <p><HTML</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">20%</div>
               </div>
@@ -90,7 +90,7 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>TODO</p>
+            <p>Atuo na área da tecnologia, vivência com suporte técnico remoto, presencial e online. Acompanhamento de chamados, SLA, responsável pelas trativas e soluções dos atendimentos.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -100,13 +100,8 @@
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Universidade Paulista (UNIP)</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dezembro 2017 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-              <p>Atuo na área da tecnologia, vivência com suporte técnico remoto, presencial e online. Acompanhamento de chamados, SLA, responsável pelas trativas e soluções dos atendimentos.</p>
+              <p>Suporte técnico remoto, presencial e online.</p>
               <hr>
-            </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
             </div>
           </div>
   
@@ -123,16 +118,23 @@
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
+                <li><a href="https://www.dio.me/certificate/C876B995/share" target="_blank">Projeto com HTML/CSS para Listagem de Pokémon</a></li>
+                <li><a href="https://www.dio.me/certificate/260E3CD9/share" target="_blank">Objetos e Classes em JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/701569B8/share" target="_blank">Desenvolvimento Web com JavaScript</a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Ciência da Computação - Universidade Paulista (UNIP) </b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Agosto 2021 - Julho 2025</h6>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Gestão em Tecnologia da Informação - Universidade Paulista (UNIP) </b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2018 - 2020</h6>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Técnico em Informática - Senac </b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010</h6>
             </div>
           </div>
 
@@ -143,19 +145,12 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a href="https://github.com/madonario/js-developer-pokedex" target="_blank">USUARIO_GITHUB/REPO</a>
               </h6>
-              <p>TODO</p>
+              <p>Pokedex</p>
               <hr>
             </div>
-            <div class="w3-container">
-              <h6 class="w3-text-teal">
-                <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
-              </h6>
-              <p>TODO</p>
-            </div>
-          </div>
+           </div>
   
           <!-- End Right Column -->
         </div>
@@ -168,11 +163,9 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="LINK_GITHUB" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="LINK_LINKEDIN" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-      <a href="LINK_FACEBOOK" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-      <a href="LINK_INSTAGRAM" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-      <a href="LINK_TWITTER" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+      <a href="https://github.com/madonario" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/michelle-adon%C3%A1rio" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
